Removed conditional based on incorrect assumption (that a question's randomization cannot be changed) to fix variant bug
Removed initialization of unused variable

Updated test cases to reflect new behavior

Added additional test case for different answer variants with most recent empty and a reference in AUTHORS

--- a/AUTHORS
+++ b/AUTHORS
@@ -6,3 +6,4 @@ Gabe Mulley <gabe@edx.org>
 Jason Bau <jbau@stanford.edu>
 Justin Helbert <jhelbert@edx.org>
 Will Daly <will@edx.org>
+Dylan Rhodes <dylanr@stanford.edu>
