--- a/AUTHORS
+++ b/AUTHORS
@@ -7,3 +7,4 @@ Jason Bau <jbau@stanford.edu>
 Justin Helbert <jhelbert@edx.org>
 Will Daly <will@edx.org>
 Dylan Rhodes <dylanr@stanford.edu>
+Braden MacDonald <braden@opencraft.com>
