Add Tim Krones to AUTHORS.

--- a/AUTHORS
+++ b/AUTHORS
@@ -8,3 +8,4 @@ Justin Helbert <jhelbert@edx.org>
 Will Daly <will@edx.org>
 Dylan Rhodes <dylanr@stanford.edu>
 James Rowan <jrowan@mit.edu>
+Tim Krones <t.krones@gmx.net>
