Add the capability for analysts to define their own tasks, or SQL scripts, which can be run, sequentially, against a target HP Vertica database, using a constrained set of credentials and schema.
We've created two new tasks: RunVerticaSqlScriptTask and
RunVerticaSqlScriptsTask.

The former allows a user to run a single script against an HP Vertica
database, which will run in a configured schema.  The latter will read a
configuration file that specifies many scripts to be run, scheduling
them such that they run sequentially, one after the other, and only
continue running so long as the previous script did not encounter an
error.

This allows use to have a separate repository where analysts can commit
SQL scripts to run against the data warehouse to generate their own
summary tables, etc, without needing to write Luigi scripts and worry
about scheduling.

--- a/AUTHORS
+++ b/AUTHORS
@@ -12,4 +12,4 @@ Dmitry Viskov <dmitry.viskov@webenterprise.ru>
 Sanford Student <sstudent@edx.org>
 Jillian Vogel <jill@opencraft.com>
 Dennis Jen <djen@edx.org>
-
+Toby Lawrence <tlawrence@edx.org>
